--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -30,7 +30,7 @@
     <td><%=h user.id %></td>
     <td><%=h user.name %></td>
     <td><%=h user.username %></td>
-    <td><%=raw user.email %></td>
+    <td><%= auto_link_email_addresses( user.email ).html_safe %></td>
     <td><%=h  user.role_symbols %></td>
     <td><%=h user.phone %></td>
     <td><%=h user.mobile %></td>
