myitcrm2-200: Updating to Rails 3

--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -87,7 +87,7 @@
       <strong><%= t "global.email" %>:</strong>
     </td>
     <td align="left">
-     <%= auto_link_email_addresses( @supplier.email ) %>
+     <%= auto_link_email_addresses( @supplier.email ).html_safe %>
     </td>
   </tr>
     <tr>
