--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
     <th ><%= t "global.phone" %></th>
     <th ><%= t "global.mobile" %></th>
     <th ><%= t "global.active" %></th>
-    <th ><%= t "supplier.actions" %></th>
+    <th align="center" ><%= t "supplier.actions" %></th>
   </tr>
 
 <% @user.each do |user| %>
