myitcrm2-203: Updating to HTML 5

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title><%= Setting::business_name %>-<%= @title || "" %></title>
@@ -25,7 +24,6 @@
   <!--<div id="right_bar">
   </div>-->
   <div id="yield">
-    <!--mytodo - Need to fix up flash notices and CSS styles-->
      <%- flash.each do |name, msg| -%>
         <p>
           <%= content_tag :div, msg, :id => "flash_#{name}" %>
