--- a/app/views/work_orders/_closed_wo_tab.html.erb
+++ b/app/views/work_orders/_closed_wo_tab.html.erb
@@ -1,4 +1,4 @@
-<table width="100%" >
+<table width="100%" cellspacing="0" >
   <tr><!--mytodo: add translation-->
     <th><%= "WO #" %></th>
     <th><%= "Client" %></th>
