--- a/app/views/work_orders/index.html.erb
+++ b/app/views/work_orders/index.html.erb
@@ -1,5 +1,6 @@
 <div id="top_float_right">
   <%= link_to(image_tag('add.png',:title => [t "workorder.t_add_new"]), users_path) %><%= link_to [t "workorder.t_add_new"], users_path %>
+  <%= link_to(image_tag("back.png", :title=> (t "global.back"), :align => "bottom", :hspace => "2"), :back)%><%= link_to (t "global.back"), :back %>
 </div>
 <div id="ddtabs1" class="basictab" >
 <ul>
