--- a/app/views/work_orders/_assigned_wo_tab.html.erb
+++ b/app/views/work_orders/_assigned_wo_tab.html.erb
@@ -30,9 +30,9 @@
         <% else %>
     <td></td>
         <% end %>
-    <td ><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(assigned_wo.id) )%>
-        <%= link_to(image_tag('printer.png', :title => [t "global.print"]), work_order_path(assigned_wo.id,:format => 'pdf'))%>
-        <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(assigned_wo.id)) %>
+    <td align="center" ><%= link_to(image_tag('view.png', :title => [t "global.view"]), work_order_path(assigned_wo.id) )%>&nbsp;
+        <%= link_to(image_tag('printer.png', :title => [t "global.print"]), work_order_path(assigned_wo.id,:format => 'pdf'))%>&nbsp;
+        <%= link_to(image_tag('edit.png', :title => [t "global.edit"]), edit_work_order_url(assigned_wo.id)) %>&nbsp;
         <%= link_to(image_tag('delete.png', :title => [t "global.delete"]), work_order_path(assigned_wo.id), :confirm => 'Are you sure?', :method => :delete ) %>
     </td>
   </tr>
