--- a/app/views/work_orders/new.html.erb
+++ b/app/views/work_orders/new.html.erb
@@ -1,4 +1,8 @@
-<!--mytodo - heaps to fix up here....add tabs and all fields required. Also i18n labels and headings-->
+<!--mytodo - heaps to fix up here....add tabs and all fields required.-->
+<div id="top_float_right">
+  <%= link_to(image_tag("close.png", :title=> (t "global.exit"), :align => "bottom", :hspace => "2"), work_orders_path)%><%= link_to (t "global.exit"), work_orders_path %>
+  <%= link_to(image_tag("back.png", :title=> (t "global.back"), :align => "bottom", :hspace => "2"), :back)%><%= link_to (t "global.back"), :back %>
+</div>
 <div id="ddtabs1" class="basictab">
 <ul>
 <li><a href="#<%= t "workorder.tab_menu_basic_name"  %>" rel="sc1"><%= (t "workorder.tab_menu_basic") %></a></li>
