--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,8 +15,8 @@
 <div class="tabcontainer">
 
   <div id="sc1" class="tabcontent">
-    <%= semantic_form_for(@user) do |f| %>
-        <%= f.inputs do %>
+    <%= simple_form_for(@user) do |f| %>
+
             <%= f.input :username, :label => (t "user.username") %>
             <%= f.input :name, :hint =>(t "user.name_eg"), :label =>(t "user.name") %>
             <%= f.input :password, :required => true %>
@@ -29,7 +29,7 @@
             <%= f.input :phone, :input_html => {:size => 30}, :label => (t "global.phone") %>
             <%= f.input :mobile, :input_html => {:size => 30}, :label => (t "global.mobile") %>
             <%= f.input :fax, :input_html => {:size => 30}, :label => (t "global.fax") %>
-            <%= f.buttons %>
+            <%= f.button :submit %>
 
             <% if current_user == nil %>
                 <%= hidden_field_tag "user[created_by]", "SELF" %>
@@ -37,24 +37,20 @@
                 <%= hidden_field_tag "user[created_by]", current_user.username %>
             <% end %>
 
-        <% end %>
+
     <% end %>
     </div>
     <% if permitted_to? :destroy, @user %>
         <div id="sc2" class="tabcontent">
-          <%= semantic_form_for(@user) do |f| %>
-              <%= f.inputs do %>
+            <%= simple_form_for(@user) do |f| %>
                   <%= f.input :roles, :as => :check_boxes, :collection => User::ROLES, :label => (t "global.role") %>
-              <% end %>
-
-              <%= f.buttons %>
+             <%= f.button :submit %>
               <% if current_user == nil %>
                   <%= hidden_field_tag "user[created_by]", @user.username %>
               <% else %>
                   <%= hidden_field_tag "user[created_by]", current_user.username %>
               <% end %>
-
-          <% end %>
+            <% end %>
         </div>
     <% end %>
   </div>
