--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -364,7 +364,7 @@ fieldset.settings label { display: block; }
 /*Simple Form CSS Values BOC*/
 .simple_form label {
 float: left;
-width: 100px;
+width: 20%;
 text-align: right;
 margin: 2px 10px;
 }
@@ -377,5 +377,8 @@ margin-left: 120px;
 .simple_form div.boolean label {
 float: none;
 margin: 0;
+}
+.simple_form hint{
+    text-decoration:underline
 }
 /* Simple Form CSS Values EOC*/
