--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -370,6 +370,7 @@ margin: 2px 10px;
 }
 .simple_form div.input {
 margin-bottom: 10px;
+
 }
 .simple_form div.boolean, .simple_form input[type='submit'] {
 margin-left: 120px;
@@ -378,7 +379,32 @@ margin-left: 120px;
 float: none;
 margin: 0;
 }
-.simple_form hint{
-    text-decoration:underline
+.simple_form div.boolean label, .simple_form label.collection_check_boxes {
+  float: none;
+  margin: 0;
+}
+
+.simple_form label.collection_check_boxes {
+  margin-right: 10px;
+  margin-left: 2px;
+  display:table-row;
+  text-align:left;
+}
+.simple_form .error {
+  clear: left;
+  margin-left: 260px;
+  font-size: 12px;
+  text-transform:capitalize;
+  color: #D00;
+  display: block;
+}
+
+.simple_form .hint {
+  clear: left;
+  margin-left: 260px;
+  font-size: 12px;
+  color: #555;
+  display: block;
+  font-style: italic;
 }
 /* Simple Form CSS Values EOC*/
