Updated Icons and Also placement of toolbar (top_float_left).

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,4 +1,4 @@
-<div id="top_float_right">
+<div id="top_float_left">
   <%= link_to(image_tag('add.png',:title => [t "products.t_add_new"]), new_product_path) %><%= link_to [t "products.t_add_new"], new_product_path %>
   </div>
 <% form_tag products_path, :method => 'get' do %>
