--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,12 +1,12 @@
 <!-- mytodo adjust layout the same as users-->
-<div id="top_float_right">
+<div id="top_float_left">
 <% if permitted_to? :destroy, Supplier.new %>
 <%= link_to(image_tag("trash.png", :title=> (t "global.delete"),:align => "bottom", :hspace => "2"), :confirm => 'Are you sure?',  :action => :destroy )%><%= link_to (t "global.delete"), @supplier, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
 <% end %>
 <% if permitted_to? :edit, Supplier %>
 <%= link_to(image_tag("edit.png", :title=> (t "global.edit"),:align => "bottom", :hspace => "2"), edit_supplier_path)%><%= link_to (t "global.edit"), edit_supplier_path %>&nbsp;&nbsp;
 <% end %>
-  <%= link_to(image_tag("close.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), suppliers_path)%><%= link_to (t "global.close"), suppliers_path %>
+  <%= link_to(image_tag("exit.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), suppliers_path)%><%= link_to (t "global.close"), suppliers_path %>
 </div>
 <div id="show_view">
 <table width="100%">
