--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
-<div id="top_float_right">
-  <%= link_to(image_tag('add.png',:title => [t "user.add_new_user"]), new_user_path) %><%= link_to("Add New", new_user_path) %>
+<div id="top_float_left">
+  <%= link_to(image_tag('add.png',:title => [t "user.add_new_user"], :align => "bottom", :hspace => "2"), new_user_path) %><%= link_to([t "global.new"], new_user_path) %>
 </div>
-
+<br>
 <%= form_tag users_path, :method => 'get' do %>
    <p><%= t "user.search"  %>
-     <%=  text_field_tag :search, params[:search]  %>
+     <%= text_field_tag :search, params[:search] %>
      <%= submit_tag (t "global.submit"), :name => nil %>
 
    </p>
