--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,7 @@
-<div id="top_float_right">
-  <%= link_to(image_tag("close.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), users_path) %><%= link_to (t "global.close"), users_path %>
+<div id="top_float_left">
+  <%= link_to(image_tag("exit.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), users_path) %><%= link_to (t "global.close"), users_path %>
 </div>
+<br>
 
 <div id="ddtabs1" class="basictab">
   <ul>
