--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,12 @@
 <!--mytodo -add all fields, -add tabs-->
-<div id="top_float_right">
+<div id="top_float_left">
   <% if permitted_to? :destroy, Product.new %>
       <%= link_to(image_tag("trash.png", :title=> (t "global.delete"), :align => "bottom", :hspace => "2"), :confirm => 'Are you sure?', :action => :destroy) %><%= link_to (t "global.delete"), @product, :confirm => 'Are you sure?', :method => :delete %>&nbsp;&nbsp;
   <% end %>
   <% if permitted_to? :edit, Product %>
       <%= link_to(image_tag("edit.png", :title=> (t "global.edit"), :align => "bottom", :hspace => "2"), edit_product_path) %><%= link_to (t "global.edit"), edit_product_path %>&nbsp;&nbsp;
   <% end %>
-  <%= link_to(image_tag("close.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), products_path) %><%= link_to (t "global.close"), products_path %>
+  <%= link_to(image_tag("exit.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), products_path) %><%= link_to (t "global.close"), products_path %>
 </div>
 
 <div id="ddtabs1" class="basictab" >
