--- a/app/views/settings/edit.html.erb
+++ b/app/views/settings/edit.html.erb
@@ -2,8 +2,8 @@
 
 <h1><%= t "settings.t_title" %></h1>
 
-<div id="top_float_right">
-  <%= link_to(image_tag('close.png', :title => [t "global.close"]), root_url) %>&nbsp;<%= link_to([t "global.close"], root_url) %>
+<div id="top_float_left">
+  <%= link_to(image_tag('exit.png', :title => [t "global.close"]), root_url) %>&nbsp;<%= link_to([t "global.close"], root_url) %>
 </div>
 
 <div id="ddtabs1" class="basictab">
