--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -1,4 +1,4 @@
-<div id="top_float_right">
+<div id="top_float_left">
   <%= link_to(image_tag('add.png',:title => [t "supplier.t_add_new_supplier"]), new_supplier_path) %><%= link_to [t "supplier.t_add_new_supplier"], new_supplier_path %>
 </div>
 
