myitcrm2-REFS#200: Updating to Rails 3

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div id="top_float_left">
-  <%= link_to(image_tag("exit.png", :title=> (t "global.close"), :align => "bottom", :hspace => "2"), users_path) %><%= link_to (t "global.close"), users_path %>
+  <%= link_to(image_tag("exit.png", :title=> (t "global.exit"), :align => "bottom", :hspace => "2"), users_path) %><%= link_to (t "global.exit"), users_path %>
 </div>
 <br>
 
